--- a/es/marketing.html
+++ b/es/marketing.html
@@ -65,8 +65,8 @@
                   <img src="../images/web-hero-marketing-1.png">
               </div>
               <div class="col-lg-5 marketing_content_blocks_txt">
-                <h2>Utilice el <strong>diagrama de Gantt </strong>para planificar sus tareas y fechas límite</h2>
-                <p>Planifique sus tareas, establezca fechas realistas que pueda cumplir, visualice el progreso de sus proyectos a tiempo y avance más rápido</p>
+                <h2>Utilice el <strong>diagrama de Gantt</strong>para planificar su tarea y fechas límite</h2>
+                <p>Planifique sus tareas, establezca fechas realistas que pueda cumplir, visualice el progreso de sus proyectos a tiempo y avance más rápido.</p>
                 <figure class="marketing_content_blocks_smallim">
                   <img src="../images/gg1.png" alt="">
                 </figure>
@@ -81,8 +81,8 @@
                   <img src="../images/web-hero-marketing-2.png">
               </div>
               <div class="col-lg-5 marketing_content_blocks_txt">
-                <h2><strong>Todos los archivos </strong> en la misma Applicación</h2>
-                <p>Todos los archivos de sus proyectos en el mismo lugar, comparta documentos y colabore y trabaje en equipo en una sóla aplicación</p>
+                <h2><strong>All files</strong> in the same ApplicationBudget Tracker</h2>
+                <p>All your projects files in the same place, share documents, and collaborate, team work in an application.</p>
                 <figure class="marketing_content_blocks_smallim">
                 </figure>
               </div>
@@ -96,8 +96,8 @@
                   <img src="../images/web-hero-marketing-3.png">
               </div>
               <div class="col-lg-5 marketing_content_blocks_txt">
-                <h2>Fuerte colaboración y <strong>administración de tareas</strong></h2>
-                <p>Administre sus tareas, subtareas y asignaciones, todo en un solo lugar, con funciones increíbles como Time Tracker, Expense Eracker y Voice Notes</p>
+                <h2>Strong Collabooration and<strong> Task Manager</strong></h2>
+                <p>Manage your tasks and assignments and subtasks, in one place, expenses, time per task and more.</p>
                 <figure class="marketing_content_blocks_smallim">
                   <img src="images/gg3.png" alt="">
                 </figure>
@@ -112,8 +112,8 @@
 <br>
 <div class="joinworkep_btns">
   <ul>
-    <li><a href="https://app.workep.com/login" class="signupgoogle"><span>PRUEBE CON GOOGLE</span></a></li>
-    <li><a href="https://projectmanagement.workep.com/request-demo" class="book-demo"><span>AGENDE UN DEMO</span></a></li>
+    <li><a href="https://app.workep.com/login" class="signupgoogle"><span>TRY FOR FREE WITH GOOGLE</span></a></li>
+    <li><a href="https://projectmanagement.workep.com/request-demo" class="book-demo"><span>WATCH A DEMO</span></a></li>
     <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
       <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
       <i class="fa fa-star" aria-hidden="true"></i>
@@ -128,54 +128,90 @@
 <br>
 <br>
 </div>
-<f    ooter class="main_footer">
+<footer class="main_footer">
     <div class="foot_top">
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt="Logo workep"></a>
-            <p>©2020 Workep,Inc. todos los derechos reservados<br>
+            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt="Logo Workep"></a>
+            <p>©2020 Workep,Inc. All rights reserved <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
-            <span class="madeby">Hecho con <i><img src="../images/heart_im.png" alt="workep made with love "></i> por Workep</span>
+            <span class="madeby">Made with <i><img src="../images/heart_im.png" alt="workep made with love"></i> by Workep</span>
           </div>
           <div class="foot2">
-            <h4>Producto</h4>
+            <h4>Product</h4>
             <ul class="links_all">
-              <li><a href="https://workep.com/es/producto.html">Características</a></li>
-              <li><a href="https://projectmanagement.workep.com/demo">Solicitar un demo </a></li>
-              <!--<li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>-->
-              <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
-              <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
+              <li><a href="https://workep.com/product.html">Features</a></li>
+              <!-- <li><a href="#url">Integrations </a></li> -->
+              <!-- <li><a href="#url">Users guide </a></li> -->
+              <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
+              <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
+              <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
+              <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
+              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+              <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
             </ul>
+              <!--<h4>Features</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/time-tracker.html">Time traker</a></li>
+                <li><a href="https://workep.com/budget-tracker.html">Budget Traker</a></li>
+                <li><a href="https://workep.com/external-collaboration.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/gantt-chart.html">Gantt Chart</a></li>
+                <li><a href="https://workep.com/voice-notes.html">Voice notes</a></li>
+                <li><a href="https://workep.com/gmail-add-on.html">Gmail Ad-on</a></li>
+            </ul>-->
           </div>
           <div class="foot3">
             <h4>Workep</h4>
             <ul class="links_all">
-              <li><a href="https://workep.com/es/precios.html">Precios</a></li>
+              <li><a href="https://workep.com/pricing.html">Pricing</a></li>
+              <li><a href="https://angel.co/workep/jobs">Careers</a></li>
+              <li><a href="https://workep.com/partners.html">Partners</a></li>
+              <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
+            <!--<h4>Competitors</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/competitors-airtable.html">Airtable</a></li>
+                <li><a href="https://workep.com/competitors-asana.html">Asana</a></li>
+                <li><a href="https://workep.com/competitors-basecamp.html">Basecamp</a></li>
+                <li><a href="https://workep.com/competitors-jira.html">Jira</a></li>
+                <li><a href="https://workep.com/competitors-monday.html">Monday</a></li>
+                <li><a href="https://workep.com/competitors-notion.html">Notion</a></li>
+                <li><a href="https://workep.com/competitors-smartsheet.html">Smartsheet</a></li>
+                <li><a href="https://workep.com/competitors-trello.html">Trello</a></li>
+                <li><a href="https://workep.com/competitors-wrike.html">Wrike</a></li>
+            </ul>-->
           </div>
           <div class="foot4">
-            <h4>Recursos</h4>
+            <h4>Resources</h4>
             <ul class="links_all">
-              <li><a href="https://blog.workep.com/es/">Blog</a></li>
-              <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
-              <li><a href="https://help.workep.com/">Centro de ayuda</a></li>
-              <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Guía gestión de proyectos</a></li>
+              <li><a href="https://blog.workep.com/">Blog</a></li>
+              <li><a href="https://help.workep.com/">Help Center</a></li>
+              <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Complete PM guide</a></li>
             </ul>
             <h4>Legal</h4>
             <ul class="links_all">
-              <li><a href="https://workep.com/privacy-policy.html">Política de privacidad</a></li>
-              <li><a href="https://workep.com/terms.html">Términos del servicio</a></li>
+              <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
+              <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
             </ul>
+              <!--<h4>Industry</h4>
+            <ul class="links_all">
+                <li><a href="https://workep.com/startups.html">Startup</a></li>
+                <li><a href="https://workep.com/law-firms.html">Law Firms</a></li>
+                <li><a href="https://workep.com/software-dev.html">Developer Dev</a></li>
+                <li><a href="https://workep.com/consulting.html">Consulting</a></li>
+                <li><a href="https://workep.com/marketing.html">Marketing</a></li>
+            </ul>-->
           </div>
           <div class="foot5">
-            <h4>Contacto</h4>
+            <h4>Contact</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="Contacto en twitter"></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="Icono e-mail"></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="hastag"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="E-mail"></a></li>
             </ul>
           </div>
+       
         </div>
       </div>
     </div>
@@ -200,14 +236,12 @@
               <li><a href="https://www.instagram.com/workepapp" target="_blank"><img src="../images/ins.svg" alt="workep instagram"></a></li>
             </ul>
           </div>
-
           <div class="app_storelink">
             <ul>
               <li><a href="https://play.google.com/store/apps/details?id=com.workep.app"><img src="../images/google_play.png" alt="workep android"></a></li>
               <li><a href="https://apps.apple.com/app/id1438404215"><img src="../images/app_store.png" alt="workep iOS"></a></li>
             </ul>
           </div>
-
         </div>
       </div>
     </div>
