--- a/marketing.html
+++ b/marketing.html
@@ -81,8 +81,7 @@
                   <img src="images/web-hero-marketing-2.png">
               </div>
               <div class="col-lg-5 marketing_content_blocks_txt">
-                <h2><strong>All files</strong> All files in the same place.
-                </h2>
+                <h2><strong>All files</strong> All files in the same place</h2>
                 <p>Your files will be located in the same spot. Share documents and collaborate, this is a teamwork application</p>
                 <figure class="marketing_content_blocks_smallim">
                 </figure>
