--- a/es/es.html
+++ b/es/es.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="es">
   <head>
     <!-- Required meta tags -->
@@ -184,7 +184,7 @@
                 <h4>Equipos de Marketing </h4>
                 <h5>Comunicación constante con tu
                   clientes para evitar el reprocesos.</h5>
-                <a href="https://workep.com/es/marketing.html">View More</a>
+                <a href="https://workep.com/es/marketing.html">Ver Más</a>
               </div>
             </div>
           </div>
