--- a/pricing.html
+++ b/pricing.html
@@ -195,7 +195,7 @@
       <div class="phone-contact">
         <p>Not sure which plan is right for you?<br>
           Give us a call.</p>
-          <button class="phone-stage" onclick="this.innerHTML='Just Book a Meeting 👇👇👇'"  >See Phone number</button>
+          <button class="phone-stage" onclick="this.innerHTML='Just Book a Meeting 👇👇👇'"  >let's make a deal </button>
                <!-- Calendly inline widget begin -->
       <div class="calendly-inline-widget" style="min-width:320px;height:700px;" data-auto-load="false">
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
