--- a/es/es.html
+++ b/es/es.html
@@ -114,7 +114,7 @@
     <h1>Comienza el 2021 en el camino <br> correcto con Workep</h1>
     <p>La herramienta de colaboración remota entre empresas que es rápida, fácil de usar y totalmente integrada con G Suite</p>
     <div class="joinworkep_btns">
-        <ul>
+        <ul style="justify-content: left!important">
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE GRATIS CON GOOGLE</span></a></li>
           <li><a href="https://projectmanagement.workep.com/demo" class="book-demo"><span>AGENDA UN DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
