--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <p>A cross-enterprise collaboration tool that is fast, easy to use <br>
     and fully integrated within G Suite.</p>
     <div class="joinworkep_btns">
-        <ul>
+        <ul style="justify-content: left!important">
           <li><a href="https://app.workep.com/login" class="signupgoogle"><span>TRY FOR FREE WITH GOOGLE</span></a></li>
           <li><a href="https://projectmanagement.workep.com/request-demo" class="book-demo"><span>WATCH A DEMO</span></a></li>
           <!--<li><a href="https://gsuite.google.com/marketplace/app/workep/191121176373" class="g_suitbtn"><span>G SUITE MARKETPLACE <br>
