update landing pages
update landing pages and logo from the call to action.

--- a/lp/pdf-productivity.html
+++ b/lp/pdf-productivity.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>	
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>12 habilidades que el gerente de proyectos debe dominar</title>
-    <!-- Page icon -->
-    <link rel="canonical" href="https://workep.com/budget-tracker.html">
-    <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../css/easy-responsive-tabs.css">
-    <link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/main.min.css">
-    <link rel="stylesheet" href="../css/theme.css">
-    <link rel="stylesheet" href="../css/slick.css">
-    <link rel="stylesheet" href="../css/font-awesome.css">
-    <link rel="stylesheet" href="../css/dics.original.css">
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="lp-style.css">
-  </head>
+<head>	
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Learn all about Productivity Get the Best Content About Productivity!</title>
+  <!-- Page icon -->
+  <link rel="canonical" href="https://workep.com/budget-tracker.html">
+  <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="../css/easy-responsive-tabs.css">
+  <link rel="stylesheet" href="../css/animate.css">
+  <link rel="stylesheet" href="../css/main.min.css">
+  <link rel="stylesheet" href="../css/theme.css">
+  <link rel="stylesheet" href="../css/slick.css">
+  <link rel="stylesheet" href="../css/font-awesome.css">
+  <link rel="stylesheet" href="../css/dics.original.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="lp-style.css">
+</head>
 <body>
 <header class="main_head no-bg">
       <div class="container">
