--- a/lp/pdf-project-management.html
+++ b/lp/pdf-project-management.html
@@ -50,13 +50,20 @@
               <div class="sib-input sib-form-block">
                 <div class="form__entry entry_block">
                   <div class="form__label-row ">
-                    <label class="entry__label" for="FIRST_NAME" data-required="*">
-                      Nombre
+                    <label class="entry__label" for="NOMBRE" data-required="*">
+                      Introduzca su NOMBRE
                     </label>
+    
                     <div class="entry__field">
                       <input class="input" maxlength="200" type="text" id="NOMBRE" name="NOMBRE" autocomplete="off" placeholder="NOMBRE" data-required="true" required />
                     </div>
                   </div>
+    
+                  <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+                  </label>
+                  <label class="entry__specification" style="font-size:12px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#8390A4;">
+                    Personalice este texto de ayuda opcional antes de publicar su formulario.
+                  </label>
                 </div>
               </div>
             </div>
