--- a/lp/12-skills-project-manager-needs-to-master.html
+++ b/lp/12-skills-project-manager-needs-to-master.html
@@ -24,7 +24,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
-           <a href="https://workep.com"><img src="../images/logo.png" alt=""></a>
+           <a href="https://workep.com"><img src="../images/logo.png" alt="Logo de Workep"></a>
          </div>
            <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle">
           <span class="textdesk">SIGN UP WITH GOOGLE</span>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div>
-          <div style="padding: 8px 0;">
+          <div>
             <div class="sib-input sib-form-block">
               <div class="form__entry entry_block">
                 <div class="form__label-row ">
@@ -120,48 +120,48 @@
           <div class="sib-radiobutton-group sib-form-block" data-required="true">
             <div class="form__entry entry_mcq">
               <div class="form__label-row ">
-                <label class="entry__label" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#3c4858;" for="ROLE" data-required="*">
+                <label class="entry__label" for="ROLE" data-required="*">
                   Role
                 </label>
                 <div>
                   <div class="entry__choice">
                     <label>
                       <input /type="radio" name="ROLE" class="input_replaced" value="1" required>
-                      <span class="radio-button"></span><span style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#3C4858; background-color:transparent;">CEO</span> </label>
+                      <span class="radio-button"></span><span>CEO</span> </label>
                   </div>
                   <div class="entry__choice">
                     <label>
                       <input /type="radio" name="ROLE" class="input_replaced" value="2" required>
-                      <span class="radio-button"></span><span style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#3C4858; background-color:transparent;">Executive Level</span> </label>
+                      <span class="radio-button"></span><span>Executive Level</span> </label>
                   </div>
                   <div class="entry__choice">
                     <label>
                       <input /type="radio" name="ROLE" class="input_replaced" value="3" required>
-                      <span class="radio-button"></span><span style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#3C4858; background-color:transparent;">Coordinador / PM</span> </label>
+                      <span class="radio-button"></span><span>Coordinador / PM</span> </label>
                   </div>
                   <div class="entry__choice">
                     <label>
                       <input /type="radio" name="ROLE" class="input_replaced" value="4" required>
-                      <span class="radio-button"></span><span style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#3C4858; background-color:transparent;">Professional at the company</span> </label>
+                      <span class="radio-button"></span><span>Professional at the company</span> </label>
                   </div>
                   <div class="entry__choice">
                     <label>
                       <input /type="radio" name="ROLE" class="input_replaced" value="5" required>
-                      <span class="radio-button"></span><span style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#3C4858; background-color:transparent;">Intern at the company</span> </label>
+                      <span class="radio-button"></span><span>Intern at the company</span> </label>
                   </div>
                   <div class="entry__choice">
                     <label>
                       <input /type="radio" name="ROLE" class="input_replaced" value="6" required>
-                      <span class="radio-button"></span><span style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#3C4858; background-color:transparent;">I don&#039;t work in the company</span> </label>
+                      <span class="radio-button"></span><span>I don&#039;t work in the company</span> </label>
                   </div>
                 </div>
               </div>
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary">
               </label>
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-form-block" style="text-align: left">
             <button form="sib-form" type="submit"><img src="../images/right-arrow-btn.svg" style="width: 15px; vertical-align: initial;">
               <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">
