--- a/lp/contacta-a-ventas.html
+++ b/lp/contacta-a-ventas.html
@@ -41,67 +41,18 @@
         <h1>Contacta a nuestro equipo de ventas</h1>
         <h3>¡Nuestro equipo de ventas estará encantado de ayudarle!</h3>
           <!-- Begin Sendinblue Form -->
-<!-- START - We recommend to place the below code in head tag of your website html  -->
-<style>
-  @font-face {
-    font-display: block;
-    font-family: Roboto;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
-  }
-
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 600;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
-  }
-
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 700;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff) format("woff")
-  }
-
-  #sib-container input:-ms-input-placeholder {
-    text-align: left;
-    font-family: "Helvetica", sans-serif;
-    color: #c0ccda;
-  }
-
-  #sib-container input::placeholder {
-    text-align: left;
-    font-family: "Helvetica", sans-serif;
-    color: #c0ccda;
-  }
-</style>
-<link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
-<!--  END - We recommend to place the above code in head tag of your website html -->
-
-<!-- START - We recommend to place the below code where you want the form in your website html  -->
+          <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
+          <!--  END - We recommend to place the above code in head tag of your website html -->
   <div id="sib-form-container" class="sib-form-container">
     <div id="sib-container" class="sib-container--large sib-container--vertical">
       <form id="sib-form" method="POST" action="https://988ef0dd.sibforms.com/serve/MUIEAL0ggf0HflDAHQAAIMwf_IMQyz_72t0HD7dd5z6-FLmbw5tCd83ItsGu2D9T9celOtarSqhPv99hbfnpDlE3FojNAZmRqMzJ6HwY_E-_A8Ppa4vZuSWCwSkNCr2oWd43-gJq-Qk8bIvurcGjFs3Fc-Eo3Bm0g9neuQubNH2RpF8fSSZXyARmgSDmgkvldcaitPHqG2nWY8Tp">
-        <div style="padding: 8px 0;">
-          <div class="sib-form-block">
-            <p>Newsletter</p>
-          </div>
-        </div>
-        <div style="padding: 8px 0;">
-          <div class="sib-form-block">
-            <div class="sib-text-form-block">
-              <p>Suscríbase a nuestra newsletter para recibir nuestras novedades.</p>
-            </div>
-          </div>
-        </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
                 <label class="entry__label" for="NOMBRE" data-required="*">
                   Nombre
                 </label>
-
                 <div class="entry__field">
                   <input class="input" maxlength="200" type="text" id="NOMBRE" name="NOMBRE" autocomplete="off" data-required="true" required />
                 </div>
@@ -112,7 +63,7 @@
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
@@ -127,7 +78,7 @@
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
@@ -144,7 +95,7 @@
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
@@ -158,7 +109,7 @@
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-select sib-form-block" data-required="true">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
@@ -226,7 +177,7 @@
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;" sty>
+        <div>
           <div class="sib-select sib-form-block" data-required="true">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
@@ -249,7 +200,7 @@
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-form-block" style="text-align: left">
             <button form="sib-form" type="submit"><img src="../images/right-arrow-btn.svg" style="width: 15px; vertical-align: initial;">
               <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">
