--- a/lp/thanks-calendar.html
+++ b/lp/thanks-calendar.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Workep Premium en 50%</title> 
+    <title>Graciasp or contactarte con nosotros</title> 
     <!-- Page icon -->
     <link rel="canonical" href="https://workep.com/budget-tracker.html">
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
@@ -43,16 +43,18 @@
   </div>
     <div class="col-md-6">
       <div class="time_tracker_contentbox">
+      
       <!-- Calendly inline widget begin -->
-      <div class="calendly-inline-widget" style="min-width:320px;height:1200px;" data-auto-load="false">
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-        <script>
-        Calendly.initInlineWidget({
-        url: 'https://calendly.com/camila-workep/60-min?month=2021-03'
-        });
-        </script>
-      </div>
-      <!-- Calendly inline widget end -->  
+<div class="calendly-inline-widget" style="min-width:320px;height:580px;" data-auto-load="false">
+  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+  <script>
+  Calendly.initInlineWidget({
+  url: 'https://calendly.com/camila-workep/training-session-with-workep-clone?month=2021-03'
+  });
+  </script>
+ </div>
+ <!-- Calendly inline widget end -->
+ 
         
     </div>
     </div>
