--- a/lp/demo.html
+++ b/lp/demo.html
@@ -41,54 +41,15 @@
         <h1>Mira Workep en acción</h1>
         <h3>¡Programa un Demo para ti y tu equipo hoy!</h3>
     <!-- Begin Sendinblue Form -->
-<!-- START - We recommend to place the below code in head tag of your website html  -->
-<style>
-  @font-face {
-    font-display: block;
-    font-family: Roboto;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
-  }
-
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 600;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
-  }
-
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 700;
-    src: url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2) format("woff2"), url(https://assets.sendinblue.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff) format("woff")
-  }
-
-  #sib-container input:-ms-input-placeholder {
-    text-align: left;
-    font-family: "Helvetica", sans-serif;
-    color: #c0ccda;
-  }
-
-  #sib-container input::placeholder {
-    text-align: left;
-    font-family: "Helvetica", sans-serif;
-    color: #c0ccda;
-  }
-</style>
 <link rel="stylesheet" href="https://sibforms.com/forms/end-form/build/sib-styles.css">
 <!--  END - We recommend to place the above code in head tag of your website html -->
-
-<!-- START - We recommend to place the below code where you want the form in your website html  -->
-<div class="sib-form" style="text-align: center;
-         background-color: #EFF2F7;                                           ">
-  <div id="sib-form-container" class="sib-form-container">
-    <div id="sib-container" class="sib-container--large sib-container--vertical" style="text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:1px; border-color:#C0CCD9; border-style:solid;">
+    <div id="sib-container" class="sib-container--large sib-container--vertical">
       <form id="sib-form" method="POST" action="https://988ef0dd.sibforms.com/serve/MUIEAGQ7ssGQkY-KOTTDbRk-5x0dChvzKKISVHEJKLT8KDOJvOumdp4weOgTdyI1iICSXilcfVldDI5otmYRlNvry1hb02cHGhQ4IiC1nHsyI6TWbBy1Ul4bv6DA9gGN9xFUo1rOIREa_8hYPavMCD9IZmDE-P7ztk95ljLlaoEYcAtzIvTFosOWEH5ebmqdGl-IvjWwn9OTZnp3">
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
-                <label class="entry__label" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#3c4858;" for="NOMBRE" data-required="*">
+                <label class="entry__label" for="NOMBRE" data-required="*">
                   Nombre
                 </label>
 
@@ -97,16 +58,16 @@
                 </div>
               </div>
 
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary" >
               </label>
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
-                <label class="entry__label" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#3c4858;" for="APELLIDOS" data-required="*">
+                <label class="entry__label" for="APELLIDOS" data-required="*">
                   Apellido
                 </label>
 
@@ -115,16 +76,16 @@
                 </div>
               </div>
 
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary">
               </label>
             </div>
           </div>
         </div>
-        <div style="padding: 8px 0;">
+        <div>
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
-                <label class="entry__label" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#3c4858;" for="EMAIL" data-required="*">
+                <label class="entry__label" for="EMAIL" data-required="*">
                   E-Mail
                 </label>
 
@@ -133,7 +94,7 @@
                 </div>
               </div>
 
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary">
               </label>
             </div>
           </div>
@@ -142,7 +103,7 @@
           <div class="sib-input sib-form-block">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
-                <label class="entry__label" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#3c4858;" for="COMPANY" data-required="*">
+                <label class="entry__label" for="COMPANY" data-required="*">
                   Compañía
                 </label>
 
@@ -151,7 +112,7 @@
                 </div>
               </div>
 
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary">
               </label>
             </div>
           </div>
@@ -160,7 +121,7 @@
           <div class="sib-select sib-form-block" data-required="true">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
-                <label class="entry__label" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#3c4858;" for="ROLE" data-required="*">
+                <label class="entry__label" for="ROLE" data-required="*">
                   Rol
                 </label>
                 <div class="entry__field">
@@ -188,7 +149,7 @@
                   </select>
                 </div>
               </div>
-              <label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:&quot;Helvetica&quot;, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;">
+              <label class="entry__error entry__error--primary">
               </label>
             </div>
           </div>
@@ -197,7 +158,7 @@
           <div class="sib-select sib-form-block" data-required="true">
             <div class="form__entry entry_block">
               <div class="form__label-row ">
-                <label class="entry__label" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#3c4858;" for="HOW_CAN_WE_HELP" data-required="*">
+                <label class="entry__label" for="HOW_CAN_WE_HELP" data-required="*">
                   ¿Cómo podemos ayudarte?
                 </label>
                 <div class="entry__field">
@@ -251,13 +212,12 @@
         </div>
         <div style="padding: 8px 0;">
           <div class="sib-form-block" style="text-align: left">
-            <button class="sib-form-block__button sib-form-block__button-with-loader" style="font-size:16px; text-align:left; font-weight:700; font-family:&quot;Helvetica&quot;, sans-serif; color:#FFFFFF; background-color:#3E4857; border-radius:3px; border-width:0px;"
-              form="sib-form" type="submit">
+            <button form="sib-form" type="submit"><img src="../images/right-arrow-btn.svg" style="width: 15px; vertical-align: initial;">
               <svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" viewBox="0 0 512 512">
                 <path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z"
                 />
               </svg>
-              SUSCRIBIRSE
+              <b>Solicitar un Demo</b>
             </button>
           </div>
         </div>
@@ -266,8 +226,7 @@
         <input type="hidden" name="html_type" value="simple">
       </form>
     </div>
-  </div>
-</div>
+  
 <!-- END - We recommend to place the below code where you want the form in your website html  -->
 <!-- End Sendinblue Form -->    
     </div>
