--- a/lp/thanks.html
+++ b/lp/thanks.html
@@ -37,22 +37,13 @@
 <div class="row containter-lp">
   <div class="col-md-6 book-image">
     <figure><img src="../images/budget-tracker-banim.png" alt=""></figure>
-    <p class="request_demo_topLrt">
-      Descubramos juntos cómo nuestra plataforma puede ayudarlo a hacer crecer su negocio.
-    </p>  
   </div>
     <div class="col-md-6">
       <div class="time_tracker_contentbox">
-      <!-- Calendly inline widget begin -->
-      <div class="calendly-inline-widget" style="min-width:320px;height:1200px;" data-auto-load="false">
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-        <script>
-        Calendly.initInlineWidget({
-        url: 'https://calendly.com/camila-workep/60-min?month=2021-03'
-        });
-        </script>
-      </div>
-      <!-- Calendly inline widget end -->  
+       <h1>Gracias por descargar nuestro contenido</h1>
+       <h3>Recibirás en tu bandeja de correo el contenido que búscabas</h3>
+       <h4 style="color:#858585">Cof cof...Recuerda buscar bien en tu bandeja promocional si no lo encuentras 😄</h4>
+
         
     </div>
     </div>
