update first button
Update calendar from Camila.

--- a/pricing.html
+++ b/pricing.html
@@ -201,7 +201,7 @@
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
         <script>
         Calendly.initInlineWidget({
-        url: 'https://calendly.com/camila-workep/60-min?month=2021-03'
+        url: 'https://calendly.com/camila-workep/training-session-with-workep-clone'
         });
         </script>
       </div>
